@@ -5,8 +5,10 @@ import jakarta.servlet.http.HttpServletResponse;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 
 /**
  * Excel输出实用程序
@@ -18,37 +20,46 @@ public class ExcelExportUtils {
 
     /**
      * 导出 Excel 文件
-     * @param response HttpServletResponse
-     * @param dataList 数据列表
-     * @param clazz 导出类的类型
-     * @param fileName 导出的文件名
+     *
+     * @param response  HttpServletResponse
+     * @param dataList  数据列表
+     * @param clazz     导出类的类型
+     * @param fileName  导出的文件名
      * @param sheetName 工作表的名称
-     * @param <T> 泛型
+     * @param <T>       泛型
      * @throws IOException IO异常
      */
     public static <T> void exportExcel(HttpServletResponse response, List<T> dataList, Class<T> clazz, String fileName, String sheetName) throws IOException {
         response.setContentType("application/vnd.openxmlformats-officedocument.spreadsheetml.sheet");
         response.setCharacterEncoding("utf-8");
-        String encodedFileName = URLEncoder.encode(fileName, "UTF-8").replaceAll("\\+", "%20");
+        String encodedFileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8).replaceAll("\\+", "%20");
         response.setHeader("Content-Disposition", "attachment;filename=" + encodedFileName + ".xlsx");
-
-        EasyExcel.write(response.getOutputStream(), clazz)
-                .sheet(sheetName)
-                .doWrite(dataList);
+        EasyExcel.write(response.getOutputStream(), clazz).sheet(sheetName).doWrite(dataList);
     }
 
-    // 新增导出模板的方法
-    public static <T> void exportTemplate(HttpServletResponse response, Class<T> clazz,CustomSheetWriteHandler customSheetWriteHandler, String fileName, String sheetName) throws IOException {
+    /**
+     * 导出 Excel 文件模版
+     *
+     * @param response                HttpServletResponse
+     * @param clazz                   导出类的类型
+     * @param customSheetWriteHandler 自定义表格写入收件箱
+     * @param fileName                导出的文件名
+     * @param sheetName               工作表的名称
+     * @param <T>                     泛型
+     * @throws IOException IO异常
+     */
+    public static <T> void exportTemplate(HttpServletResponse response, Class<T> clazz, CustomSheetWriteHandler customSheetWriteHandler, String fileName, String sheetName) throws IOException {
         // 创建一个空数据列表
         List<T> emptyDataList = new ArrayList<>();
-
         // 设置响应头
         response.setContentType("application/vnd.openxmlformats-officedocument.spreadsheetml.sheet");
         response.setCharacterEncoding("utf-8");
-        String encodedFileName = URLEncoder.encode(fileName, "UTF-8").replaceAll("\\+", "%20");
+        String encodedFileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8).replaceAll("\\+", "%20");
         response.setHeader("Content-Disposition", "attachment;filename=" + encodedFileName + ".xlsx");
-
-        // 使用 EasyExcel 写入空数据列表
-        EasyExcel.write(response.getOutputStream(), clazz).registerWriteHandler(customSheetWriteHandler).sheet(sheetName).doWrite(emptyDataList);
+        if (Objects.isNull(customSheetWriteHandler)) {
+            EasyExcel.write(response.getOutputStream(), clazz).sheet(sheetName).doWrite(emptyDataList);
+        } else {
+            EasyExcel.write(response.getOutputStream(), clazz).registerWriteHandler(customSheetWriteHandler).sheet(sheetName).doWrite(emptyDataList);
+        }
     }
 }
